# evacuate_us

./: Dockerfile  README.md  pyproject.toml
evacuate_us/: config.py  container.py  main.py
evacuate_us/routers/: alert.py  exit.py  root.py
evacuate_us/services/: gas_distribution.py  get_route.py  give_map.py  image_to_array.py  tmp.py
evacuate_us/static/css/: style.css  test.css
evacuate_us/static/js/: scanner.js
evacuate_us/templates/: base.html  fire.html  gas.html  how_to_use.html  image.html  index.html  main_page.html  model.html  safe_rec.html
