[tool.poetry]
name = "evacuate_us"
version = "0.1.0"
description = ""
authors = ["jotty <bard143games@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
dependency_injector = "^4.41.0"
sqlalchemy = "^2.0.21"
minio = "^7.1.17"
aiosqlite = "^0.19.0"
jinja2 = "^3.1.2"
greenlet = "^2.0.2"
numpy = "^1.25.0"
opencv-python = "^4.8.1.78"
python-multipart = "^0.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
